# HTTPwithesp-idf

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/HC-SR04_sensor/: CMakeLists.txt  HC-SR04_sensor.c
components/HC-SR04_sensor/include/: HC-SR04_sensor.h
components/app_logic/: CMakeLists.txt  app_logic.c
components/app_logic/include/: app_logic.h
components/buzzer_control/: CMakeLists.txt  buzzer_control.c
components/buzzer_control/include/: buzzer_control.h
components/dht_sensor/: CMakeLists.txt  dht_sensor.c
components/dht_sensor/include/: dht_sensor.h
components/led_control/: CMakeLists.txt  led_control.c
components/led_control/include/: Led_control.h
components/web_server/: CMakeLists.txt  web_server.c
components/web_server/include/: web_server.h
components/web_server/web_content/: index.html
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
main/: CMakeLists.txt  idf_component.yml  main.c
